envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8099
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              cors:
                allow_origin_string_match:
                - safe_regex:
                    google_re2: {}
                    regex: \*
                allow_methods: "PUT, GET, POST"
                allow_headers: "content-type, x-grpc-web"
                filter_enabled:
                  default_value:
                    numerator: 100
                    denominator: HUNDRED
                  runtime_key: cors.www.enabled
              routes:
              - match:
                  prefix: "/api/v2/myauth"
                route:
                  cluster: myauth
                  prefix_rewrite: "/api/v2"
          http_filters:
          - name: envoy.filters.http.cors
            typed_config: {}
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              with_request_body:
                max_request_bytes: 90000000
                allow_partial_message: true
              http_service:
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: cookie
                    - exact: x-auth-apikey
                    - exact: x-auth-nonce
                    - exact: x-auth-signature
                    - exact: user-agent
                    - exact: x-forwarded-host
                    - exact: x-forwarded-for
                    - exact: from
                    - exact: x-forwarded-proto
                    - exact: proxy-authorization
                    - exact: x-csrf-token
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: authorization
                  allowed_client_headers:
                    patterns:
                    - exact: set-cookie
                    - exact: proxy-authenticate
                    - exact: www-authenticate
                    - exact: location
                path_prefix: "/api/v2/auth"
                server_uri:
                  cluster: myauth
                  timeout: 1.000s
                  uri: http://host.docker.internal:3003
          - name: envoy.filters.http.router
            typed_config: {}
    perConnectionBufferLimitBytes: 10000000
  clusters:
  - name: myauth
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: auth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 3003
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9099
